# multi-currency-stablecoin

./: README.md  package.json  pnpm-lock.yaml
backend/: Anchor.toml  package.json
backend/globecoin/: Anchor.toml
backend/globecoin/programs/backend/src/: lib.rs
backend/globecoin/programs/globecoin/src/: lib.rs
backend/globecoin/tests/: globecoin.ts
backend/programs/backend/: Cargo.toml
backend/programs/backend/src/: lib.rs
backend/tests/: globecoin.ts
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  page.tsx
frontend/app/Mint/: page.tsx
frontend/components/: sidebar.tsx
frontend/components/sidebar/: app-sidebar.tsx
frontend/contexts/: Sample.tsx
