[package]
name = "globecoin"
version = "0.1.0"
description = "Multi-currency stablecoin on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "globecoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.31.1"
