[package]
name = "globecoin"
version = "0.1.0"
description = "Multi-currency stablecoin on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "globecoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
# anchor-version = "0.31.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
# solana-program = "2.1.0"

# [toolchain]
# anchor